Added Editor dependency

--- a/composer.json
+++ b/composer.json
@@ -10,7 +10,8 @@
         }
     ],
     "require": {
-        "difra/difra": "7.0.x-dev"
+        "difra/difra": "7.0.x-dev",
+        "difra/editor": "dev-master"
     },
     "autoload": {
         "files": [
