--- a/composer.json
+++ b/composer.json
@@ -10,7 +10,7 @@
         }
     ],
     "dist": {
-        "url": "https://www.difra.org/download/difra-cms-1.0.2.zip",
+        "url": "https://github.com/difra-org/cms/archive/1.0.2.zip",
         "type": "zip"
     },
     "require": {
