--- a/composer.json
+++ b/composer.json
@@ -13,6 +13,12 @@
         "url": "https://github.com/difra-org/cms/archive/1.0.2.zip",
         "type": "zip"
     },
+    "repositories": [
+        {
+            "type": "vcs",
+            "url": "git@github.com:difra-org/cms.git"
+        }
+    ],
     "require": {
         "difra/difra": "~7.0.0",
         "difra/editor": "~1.0.0"
